KubeYaml/Airport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: airports-assembly
  name: airports-assembly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: airports-assembly
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: airports-assembly
    spec:
      containers:
      - image: airports-assembly:1.1.0
        name: airports-assembly
        livenessProbe:
            httpGet:
                path: /health/live
                port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
        readinessProbe:
            httpGet:
                path: /health/ready
                port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
