KubeYaml/Countries.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: countries-assembly
  name: countries-assembly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: countries-assembly
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: countries-assembly
    spec:
      containers:
      - image: countries-assembly:1.0.1
        name: countries-assembly
        livenessProbe:
            httpGet:
                path: /health/live
                port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
        readinessProbe:
            httpGet:
                path: /health/ready
                port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
