KubeYaml/Countries_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: countries-assembly-service
  labels:
    app: countries-assembly-service
spec:
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8080
  selector:
    app: countries-assembly
