KubeYaml/ingress-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /countries
        backend:
          serviceName: countries-assembly-service
          servicePort: 8002
      - path: /airports
        backend:
          serviceName: airports-assembly-service
          servicePort: 8001
